# query

./: CONTRIBUTING.md  README.md  pyproject.toml
app/: main.py
data/: schema.json  text_to_sql_eval.jsonl
docs/: architecture.md  model-card.md
scripts/: benchmark_api.py  fine_tune_qlora.py  setup_sample_db.py
src/sql_generator/: __init__.py  cli.py  evaluation.py  executor.py  generator.py  schema.py  validator.py
tests/: test_sql_generator.py
